--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -5948,6 +5948,397 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Article{Pan2022,
+  author       = {Pan, Yong and Yu, Ende},
+  date         = {2022-07},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Theoretical prediction of structure, electronic and optical properties of VH2 hydrogen storage material},
+  doi          = {10.1016/j.ijhydene.2022.06.080},
+  issn         = {0360-3199},
+  number       = {64},
+  pages        = {27608--27616},
+  volume       = {47},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Liu2024b,
+  author       = {Liu, Chenxu and Yuan, Zeming and Li, Xiaoming and Sun, Yize and Zhai, Tingting and Han, Zhonggang and Zhang, Liwen and Li, Tao},
+  date         = {2024-09},
+  journaltitle = {Journal of Energy Storage},
+  title        = {Review on improved hydrogen storage properties of MgH2 by adding new catalyst},
+  doi          = {10.1016/j.est.2024.112786},
+  issn         = {2352-152X},
+  pages        = {112786},
+  volume       = {97},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Hassan2023,
+  author       = {Hassan, Qusay and Algburi, Sameer and Sameen, Aws Zuhair and Jaszczur, Marek and Salman, Hayder M.},
+  date         = {2023-08},
+  journaltitle = {Environment Systems and Decisions},
+  title        = {Hydrogen as an energy carrier: properties, storage methods, challenges, and future implications},
+  doi          = {10.1007/s10669-023-09932-z},
+  issn         = {2194-5411},
+  number       = {2},
+  pages        = {327--350},
+  volume       = {44},
+  groups       = {hydrogen_section},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Article{Liu2022,
+  author       = {Liu, Yuhang and Wang, Qilun and Zhang, Jincheng and Ding, Jie and Cheng, Yaqi and Wang, Tian and Li, Jing and Hu, Fangxin and Yang, Hong Bin and Liu, Bin},
+  date         = {2022-06},
+  journaltitle = {Advanced Energy Materials},
+  title        = {Recent Advances in Carbon‐Supported Noble‐Metal Electrocatalysts for Hydrogen Evolution Reaction: Syntheses, Structures, and Properties},
+  doi          = {10.1002/aenm.202200928},
+  issn         = {1614-6840},
+  number       = {28},
+  volume       = {12},
+  groups       = {hydrogen_section},
+  publisher    = {Wiley},
+}
+
+@Article{Pal2022,
+  author       = {Pal, Dan Bahadur and Singh, Arvind and Bhatnagar, Ashish},
+  date         = {2022-01},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review on biomass based hydrogen production technologies},
+  doi          = {10.1016/j.ijhydene.2021.10.124},
+  issn         = {0360-3199},
+  number       = {3},
+  pages        = {1461--1480},
+  volume       = {47},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Dash2023,
+  author       = {Dash, Santanu Kumar and Chakraborty, Suprava and Elangovan, Devaraj},
+  date         = {2023-01},
+  journaltitle = {Energies},
+  title        = {A Brief Review of Hydrogen Production Methods and Their Challenges},
+  doi          = {10.3390/en16031141},
+  issn         = {1996-1073},
+  number       = {3},
+  pages        = {1141},
+  volume       = {16},
+  groups       = {hydrogen_section},
+  publisher    = {MDPI AG},
+}
+
+@Article{Faye2022,
+  author       = {Faye, Omar and Szpunar, Jerzy and Eduok, Ubong},
+  date         = {2022-04},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A critical review on the current technologies for the generation, storage, and transportation of hydrogen},
+  doi          = {10.1016/j.ijhydene.2022.02.112},
+  issn         = {0360-3199},
+  number       = {29},
+  pages        = {13771--13802},
+  volume       = {47},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Tang2023,
+  author       = {Tang, Dan and Tan, Guang-Lei and Li, Guo-Wei and Liang, Jin-Guang and Ahmad, Shah Masood and Bahadur, Ayesha and Humayun, Muhammad and Ullah, Habib and Khan, Abbas and Bououdina, M.},
+  date         = {2023-08},
+  journaltitle = {Journal of Energy Storage},
+  title        = {State-of-the-art hydrogen generation techniques and storage methods: A critical review},
+  doi          = {10.1016/j.est.2023.107196},
+  issn         = {2352-152X},
+  pages        = {107196},
+  volume       = {64},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Hwang2023,
+  author       = {Hwang, Joonsik and Maharjan, Krisha and Cho, HeeJin},
+  date         = {2023-08},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review of hydrogen utilization in power generation and transportation sectors: Achievements and future challenges},
+  doi          = {10.1016/j.ijhydene.2023.04.024},
+  issn         = {0360-3199},
+  number       = {74},
+  pages        = {28629--28648},
+  volume       = {48},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Klopcic2023,
+  author       = {Klopčič, Nejc and Grimmer, Ilena and Winkler, Franz and Sartory, Markus and Trattner, Alexander},
+  date         = {2023-11},
+  journaltitle = {Journal of Energy Storage},
+  title        = {A review on metal hydride materials for hydrogen storage},
+  doi          = {10.1016/j.est.2023.108456},
+  issn         = {2352-152X},
+  pages        = {108456},
+  volume       = {72},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{MadadiAvargani2022,
+  author       = {Madadi Avargani, Vahid and Zendehboudi, Sohrab and Cata Saady, Noori M. and Dusseault, Maurice B.},
+  date         = {2022-10},
+  journaltitle = {Energy Conversion and Management},
+  title        = {A comprehensive review on hydrogen production and utilization in North America: Prospects and challenges},
+  doi          = {10.1016/j.enconman.2022.115927},
+  issn         = {0196-8904},
+  pages        = {115927},
+  volume       = {269},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Hassan2023a,
+  author       = {Hassan, Qusay and Abdulateef, Ammar M. and Hafedh, Saadoon Abdul and Al-samari, Ahmed and Abdulateef, Jasim and Sameen, Aws Zuhair and Salman, Hayder M. and Al-Jiboory, Ali Khudhair and Wieteska, Szymon and Jaszczur, Marek},
+  date         = {2023-05},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Renewable energy-to-green hydrogen: A review of main resources routes, processes and evaluation},
+  doi          = {10.1016/j.ijhydene.2023.01.175},
+  issn         = {0360-3199},
+  number       = {46},
+  pages        = {17383--17408},
+  volume       = {48},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Erdener2023,
+  author       = {Erdener, Burcin Cakir and Sergi, Brian and Guerra, Omar J. and Lazaro Chueca, Aurelio and Pambour, Kwabena and Brancucci, Carlo and Hodge, Bri-Mathias},
+  date         = {2023-02},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review of technical and regulatory limits for hydrogen blending in natural gas pipelines},
+  doi          = {10.1016/j.ijhydene.2022.10.254},
+  issn         = {0360-3199},
+  number       = {14},
+  pages        = {5595--5617},
+  volume       = {48},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Jokar2023,
+  author       = {Jokar, S.M. and Farokhnia, A. and Tavakolian, M. and Pejman, M. and Parvasi, P. and Javanmardi, J. and Zare, F. and Gonçalves, M. Clara and Basile, A.},
+  date         = {2023-02},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {The recent areas of applicability of palladium based membrane technologies for hydrogen production from methane and natural gas: A review},
+  doi          = {10.1016/j.ijhydene.2022.05.296},
+  issn         = {0360-3199},
+  number       = {16},
+  pages        = {6451--6476},
+  volume       = {48},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Tarkowski2022,
+  author       = {Tarkowski, R. and Uliasz-Misiak, B.},
+  date         = {2022-07},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Towards underground hydrogen storage: A review of barriers},
+  doi          = {10.1016/j.rser.2022.112451},
+  issn         = {1364-0321},
+  pages        = {112451},
+  volume       = {162},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Li2021b,
+  author       = {Li, Qian and Lu, Yangfan and Luo, Qun and Yang, Xiaohua and Yang, Yan and Tan, Jun and Dong, Zhihua and Dang, Jie and Li, Jianbo and Chen, Yuan and Jiang, Bin and Sun, Shuhui and Pan, Fusheng},
+  date         = {2021-11},
+  journaltitle = {Journal of Magnesium and Alloys},
+  title        = {Thermodynamics and kinetics of hydriding and dehydriding reactions in Mg-based hydrogen storage materials},
+  doi          = {10.1016/j.jma.2021.10.002},
+  issn         = {2213-9567},
+  number       = {6},
+  pages        = {1922--1941},
+  volume       = {9},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Kubas2007,
+  author       = {Kubas, Gregory J.},
+  date         = {2007-10},
+  journaltitle = {Chemical Reviews},
+  title        = {Fundamentals of H2Binding and Reactivity on Transition Metals Underlying Hydrogenase Function and H2Production and Storage},
+  doi          = {10.1021/cr050197j},
+  issn         = {1520-6890},
+  number       = {10},
+  pages        = {4152--4205},
+  volume       = {107},
+  groups       = {hydrogen_section},
+  publisher    = {American Chemical Society (ACS)},
+}
+
+@Article{Usman2022,
+  author       = {Usman, Muhammad R.},
+  date         = {2022-10},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Hydrogen storage methods: Review and current status},
+  doi          = {10.1016/j.rser.2022.112743},
+  issn         = {1364-0321},
+  pages        = {112743},
+  volume       = {167},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Yang2023,
+  author       = {Yang, Miao and Hunger, Ralf and Berrettoni, Stefano and Sprecher, Bernd and Wang, Baodong},
+  date         = {2023-02},
+  journaltitle = {Clean Energy},
+  title        = {A review of hydrogen storage and transport technologies},
+  doi          = {10.1093/ce/zkad021},
+  issn         = {2515-396X},
+  number       = {1},
+  pages        = {190--216},
+  volume       = {7},
+  groups       = {hydrogen_section},
+  publisher    = {Oxford University Press (OUP)},
+}
+
+@Article{Panigrahi2024,
+  author       = {Panigrahi, Pravas Kumar and Chandu, Basavaiah and Motapothula, Mallikarjuna Rao and Puvvada, Nagaprasad},
+  date         = {2024-02},
+  journaltitle = {Energy &amp; Fuels},
+  title        = {Potential Benefits, Challenges and Perspectives of Various Methods and Materials Used for Hydrogen Storage},
+  doi          = {10.1021/acs.energyfuels.3c04084},
+  issn         = {1520-5029},
+  number       = {4},
+  pages        = {2630--2653},
+  volume       = {38},
+  groups       = {hydrogen_section},
+  publisher    = {American Chemical Society (ACS)},
+}
+
+@Article{Drawer2024,
+  author       = {Drawer, Chris and Lange, Jelto and Kaltschmitt, Martin},
+  date         = {2024-01},
+  journaltitle = {Journal of Energy Storage},
+  title        = {Metal hydrides for hydrogen storage – Identification and evaluation of stationary and transportation applications},
+  doi          = {10.1016/j.est.2023.109988},
+  issn         = {2352-152X},
+  pages        = {109988},
+  volume       = {77},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Nivedhitha2024,
+  author       = {Nivedhitha, K.S. and Beena, T. and Banapurmath, N.R. and Umarfarooq, M.A. and Ramasamy, Venkatesh and Soudagar, Manzoore Elahi M. and Ağbulut, Ümit},
+  date         = {2024-04},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Advances in hydrogen storage with metal hydrides: Mechanisms, materials, and challenges},
+  doi          = {10.1016/j.ijhydene.2024.02.335},
+  issn         = {0360-3199},
+  pages        = {1259--1273},
+  volume       = {61},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Boateng2023,
+  author       = {Boateng, Emmanuel and Thiruppathi, Antony R. and Hung, Chi-Kai and Chow, Darren and Sridhar, Deepak and Chen, Aicheng},
+  date         = {2023-06},
+  journaltitle = {Electrochimica Acta},
+  title        = {Functionalization of graphene-based nanomaterials for energy and hydrogen storage},
+  doi          = {10.1016/j.electacta.2023.142340},
+  issn         = {0013-4686},
+  pages        = {142340},
+  volume       = {452},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Yan2024,
+  author       = {Yan, Yan and Zhang, Jiaqiao and Li, Guangzhao and Zhou, Weihao and Ni, Zhonghua},
+  date         = {2024-01},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Review on linerless type V cryo-compressed hydrogen storage vessels: Resin toughening and hydrogen-barrier properties control},
+  doi          = {10.1016/j.rser.2023.114009},
+  issn         = {1364-0321},
+  pages        = {114009},
+  volume       = {189},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Aceves2010,
+  author       = {Aceves, Salvador M. and Espinosa-Loza, Francisco and Ledesma-Orozco, Elias and Ross, Timothy O. and Weisberg, Andrew H. and Brunner, Tobias C. and Kircher, Oliver},
+  date         = {2010-02},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {High-density automotive hydrogen storage with cryogenic capable pressure vessels},
+  doi          = {10.1016/j.ijhydene.2009.11.069},
+  issn         = {0360-3199},
+  number       = {3},
+  pages        = {1219--1226},
+  volume       = {35},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Jaramillo2024,
+  author       = {Jaramillo, David E. and Moreno-Blanco, Julio and Aceves, Salvador M.},
+  date         = {2024-10},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Evaluation of cryo-compressed hydrogen for heavy-duty trucks},
+  doi          = {10.1016/j.ijhydene.2024.08.479},
+  issn         = {0360-3199},
+  pages        = {928--938},
+  volume       = {87},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Li2023a,
+  author       = {Li, Ji-Qiang and Chen, Yan and Ma, Yong Biao and Kwon, Jeong-Tae and Xu, Heng and Li, Ji-Chao},
+  date         = {2023-01},
+  journaltitle = {Case Studies in Thermal Engineering},
+  title        = {A study on the Joule-Thomson effect of during filling hydrogen in high pressure tank},
+  doi          = {10.1016/j.csite.2022.102678},
+  issn         = {2214-157X},
+  pages        = {102678},
+  volume       = {41},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Zhang2024b,
+  author       = {Zhang, Caigong and Li, Zhuoran and Li, Changjun and Wu, Xia and Sun, Lulu and Chen, Chao},
+  date         = {2024-01},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Insight into the effects of hydrogen on inside-valve flow and Joule-Thomson characteristics of hydrogen-blended natural gas: A numerical study},
+  doi          = {10.1016/j.ijhydene.2023.06.293},
+  issn         = {0360-3199},
+  pages        = {1056--1074},
+  volume       = {49},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Li2023b,
+  author       = {Li, Zhuoran and Zhang, Caigong and Li, Changjun and Wu, Xia and Xie, Hanyu and Jiang, Linyu},
+  date         = {2023-06},
+  journaltitle = {Journal of Cleaner Production},
+  title        = {Thermodynamic evaluation of the effects of hydrogen blending on the Joule-Thomson characteristics of hydrogen-blended natural gas},
+  doi          = {10.1016/j.jclepro.2023.137074},
+  issn         = {0959-6526},
+  pages        = {137074},
+  volume       = {406},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -5968,13 +6359,6 @@ Part 1: Flow capacities up to and including 120 g/s},
 2 StaticGroup:tank_types\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:master\;0\;0\;0x8a8a8aff\;\;\;;
 2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
-2 StaticGroup:patents\;0\;1\;0x7c7c7cff\;\;\;;
-2 StaticGroup:standards_section\;0\;0\;0x7c7c7cff\;\;\;;
-3 StaticGroup:strandard_defintion\;0\;0\;0x707070ff\;\;\;;
-3 StaticGroup:airacft_subsection\;0\;1\;0x707070ff\;\;\;;
-3 StaticGroup:pressure_vessel_Section\;0\;0\;\;\;\;;
-2 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
 1 StaticGroup:swith\;0\;0\;0x8a8a8aff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Reports\;0\;0\;0x8a8a8aff\;\;\;;
@@ -6006,4 +6390,12 @@ Part 1: Flow capacities up to and including 120 g/s},
 1 StaticGroup:own_research\;0\;1\;\;\;\;;
 1 StaticGroup:chapters\;0\;1\;\;\;\;;
 2 StaticGroup:state_of_art\;0\;1\;\;\;\;;
+2 StaticGroup:norms\;0\;0\;0x8a8a8aff\;\;\;;
+3 StaticGroup:patents\;0\;1\;0x7c7c7cff\;\;\;;
+3 StaticGroup:standards_section\;0\;0\;0x7c7c7cff\;\;\;;
+4 StaticGroup:strandard_defintion\;0\;0\;0x707070ff\;\;\;;
+4 StaticGroup:airacft_subsection\;0\;1\;0x707070ff\;\;\;;
+4 StaticGroup:pressure_vessel_Section\;0\;0\;\;\;\;;
+3 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
+2 StaticGroup:hydrogen_section\;0\;1\;\;\;\;;
 }
