img fine. description and link to it is missing

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -6339,6 +6339,47 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Article{Ishaq2022,
+  author       = {Ishaq, Haris and Dincer, Ibrahim and Crawford, Curran},
+  date         = {2022-07},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review on hydrogen production and utilization: Challenges and opportunities},
+  doi          = {10.1016/j.ijhydene.2021.11.149},
+  issn         = {0360-3199},
+  number       = {62},
+  pages        = {26238--26264},
+  volume       = {47},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Younas2022,
+  author       = {Younas, Muhammad and Shafique, Sumeer and Hafeez, Ainy and Javed, Fahad and Rehman, Fahad},
+  date         = {2022-05},
+  journaltitle = {Fuel},
+  title        = {An Overview of Hydrogen Production: Current Status, Potential, and Challenges},
+  doi          = {10.1016/j.fuel.2022.123317},
+  issn         = {0016-2361},
+  pages        = {123317},
+  volume       = {316},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Dawood2020,
+  author       = {Dawood, Furat and Anda, Martin and Shafiullah, G.M.},
+  date         = {2020-02},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Hydrogen production for energy: An overview},
+  doi          = {10.1016/j.ijhydene.2019.12.059},
+  issn         = {0360-3199},
+  number       = {7},
+  pages        = {3847--3869},
+  volume       = {45},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
