essential props of hydrogen inshallah corrected and fine

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -1174,15 +1174,6 @@ Now available to download in full as a PDF.},
   year         = {1997},
 }
 
-@InProceedings{lemmon2006standardized,
-  author    = {Lemmon, Eric W and Huber, Marcia L and Friend, Daniel G and Paulina, Carl and others},
-  booktitle = {SAE World Congress},
-  title     = {Standardized equation for hydrogen gas densities for fuel consumption applications},
-  pages     = {3--6},
-  groups    = {hydro_Plane, report_1},
-  year      = {2006},
-}
-
 @Misc{img_Transport,
   author = {Bernd Dittrich},
   title  = {Image, shall represent transportation},
@@ -6378,6 +6369,73 @@ Part 1: Flow capacities up to and including 120 g/s},
   volume       = {45},
   groups       = {hydrogen_section},
   publisher    = {Elsevier BV},
+}
+
+@Article{Yao2022,
+  author       = {Yao, Jing and Wu, Zhen and Wang, Huan and Yang, Fusheng and Ren, Jianwei and Zhang, Zaoxiao},
+  date         = {2022-11},
+  journaltitle = {Journal of Energy Chemistry},
+  title        = {Application-oriented hydrolysis reaction system of solid-state hydrogen storage materials for high energy density target: A review},
+  doi          = {10.1016/j.jechem.2022.07.009},
+  issn         = {2095-4956},
+  pages        = {218--238},
+  volume       = {74},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Prewitz2020,
+  author       = {Prewitz, Marc and Bardenhagen, Andreas and Beck, Ramon},
+  date         = {2020-09},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Hydrogen as the fuel of the future in aircrafts – Challenges and opportunities},
+  doi          = {10.1016/j.ijhydene.2020.06.238},
+  issn         = {0360-3199},
+  number       = {46},
+  pages        = {25378--25385},
+  volume       = {45},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{TashieLewis2021,
+  author       = {Tashie-Lewis, Bernard Chukwudi and Nnabuife, Somtochukwu Godfrey},
+  date         = {2021-11},
+  journaltitle = {Chemical Engineering Journal Advances},
+  title        = {Hydrogen Production, Distribution, Storage and Power Conversion in a Hydrogen Economy - A Technology Review},
+  doi          = {10.1016/j.ceja.2021.100172},
+  issn         = {2666-8211},
+  pages        = {100172},
+  volume       = {8},
+  groups       = {hydrogen_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Mahmoud2013,
+  author       = {Mahmoud, Mohamed},
+  date         = {2013-09},
+  journaltitle = {Journal of Energy Resources Technology},
+  title        = {Development of a New Correlation of Gas Compressibility Factor (Z-Factor) for High Pressure Gas Reservoirs},
+  doi          = {10.1115/1.4025019},
+  issn         = {1528-8994},
+  number       = {1},
+  volume       = {136},
+  groups       = {hydrogen_section},
+  publisher    = {ASME International},
+}
+
+@Article{Lemmon2008,
+  author       = {Lemmon, Eric W. and Huber, Marcia L. and Leachman, Jacob W.},
+  date         = {2008-11},
+  journaltitle = {Journal of Research of the National Institute of Standards and Technology},
+  title        = {Revised Standardized Equation for Hydrogen Gas Densities for Fuel Consumption Applications},
+  doi          = {10.6028/jres.113.028},
+  issn         = {1044-677X},
+  number       = {6},
+  pages        = {341},
+  volume       = {113},
+  groups       = {hydrogen_section},
+  publisher    = {National Institute of Standards and Technology (NIST)},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
