--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -1479,7 +1479,7 @@ Now available to download in full as a PDF.},
   number       = {33},
   pages        = {15107--15119},
   volume       = {47},
-  groups       = {report_2},
+  groups       = {report_2, h_safety},
   publisher    = {Elsevier BV},
 }
 
@@ -6438,6 +6438,47 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {National Institute of Standards and Technology (NIST)},
 }
 
+@Article{Cheikhravat2012,
+  author       = {Cheikhravat, H. and Chaumeix, N. and Bentaib, A. and Paillard, C.-E.},
+  date         = {2012-04},
+  journaltitle = {Nuclear Technology},
+  title        = {Flammability Limits of Hydrogen-Air Mixtures},
+  doi          = {10.13182/nt12-a13543},
+  issn         = {1943-7471},
+  number       = {1},
+  pages        = {5--16},
+  volume       = {178},
+  groups       = {h_safety},
+  publisher    = {Informa UK Limited},
+}
+
+@Article{Crowl2007,
+  author       = {Crowl, Daniel A. and Jo, Young-Do},
+  date         = {2007-03},
+  journaltitle = {Journal of Loss Prevention in the Process Industries},
+  title        = {The hazards and risks of hydrogen},
+  doi          = {10.1016/j.jlp.2007.02.002},
+  issn         = {0950-4230},
+  number       = {2},
+  pages        = {158--164},
+  volume       = {20},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Sanchez2014,
+  author       = {Sánchez, Antonio L. and Williams, Forman A.},
+  date         = {2014-04},
+  journaltitle = {Progress in Energy and Combustion Science},
+  title        = {Recent advances in understanding of flammability characteristics of hydrogen},
+  doi          = {10.1016/j.pecs.2013.10.002},
+  issn         = {0360-1285},
+  pages        = {1--55},
+  volume       = {41},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -6497,4 +6538,5 @@ Part 1: Flow capacities up to and including 120 g/s},
 4 StaticGroup:pressure_vessel_Section\;0\;0\;\;\;\;;
 3 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
 2 StaticGroup:hydrogen_section\;0\;1\;\;\;\;;
+3 StaticGroup:h_safety\;0\;1\;\;\;\;;
 }
