--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -6479,6 +6479,144 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Article{Bane2013,
+  author       = {Bane, S.P.M. and Ziegler, J.L. and Boettcher, P.A. and Coronel, S.A. and Shepherd, J.E.},
+  date         = {2013-03},
+  journaltitle = {Journal of Loss Prevention in the Process Industries},
+  title        = {Experimental investigation of spark ignition energy in kerosene, hexane, and hydrogen},
+  doi          = {10.1016/j.jlp.2011.03.007},
+  issn         = {0950-4230},
+  number       = {2},
+  pages        = {290--294},
+  volume       = {26},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Dimitriou2017,
+  author       = {Dimitriou, Pavlos and Tsujimura, Taku},
+  date         = {2017-09},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review of hydrogen as a compression ignition engine fuel},
+  doi          = {10.1016/j.ijhydene.2017.07.232},
+  issn         = {0360-3199},
+  number       = {38},
+  pages        = {24470--24486},
+  volume       = {42},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{FernandezTarrazo2023,
+  author       = {Fernández-Tarrazo, E. and Gómez-Miguel, R. and Sánchez-Sanz, M.},
+  date         = {2023-04},
+  journaltitle = {Fuel},
+  title        = {Minimum ignition energy of hydrogen–ammonia blends in air},
+  doi          = {10.1016/j.fuel.2022.127128},
+  issn         = {0016-2361},
+  pages        = {127128},
+  volume       = {337},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Yang2021,
+  author       = {Yang, Fuyuan and Wang, Tianze and Deng, Xintao and Dang, Jian and Huang, Zhaoyuan and Hu, Song and Li, Yangyang and Ouyang, Minggao},
+  date         = {2021-09},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Review on hydrogen safety issues: Incident statistics, hydrogen diffusion, and detonation process},
+  doi          = {10.1016/j.ijhydene.2021.07.005},
+  issn         = {0360-3199},
+  number       = {61},
+  pages        = {31467--31488},
+  volume       = {46},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Gao2016,
+  author       = {Gao, Yuan and Zhang, Bo and Ng, Hoi Dick and Lee, John H.S.},
+  date         = {2016-04},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {An experimental investigation of detonation limits in hydrogen–oxygen–argon mixtures},
+  doi          = {10.1016/j.ijhydene.2016.02.130},
+  issn         = {0360-3199},
+  number       = {14},
+  pages        = {6076--6083},
+  volume       = {41},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Zhang2016,
+  author       = {Zhang, Bo},
+  date         = {2016-07},
+  journaltitle = {Combustion and Flame},
+  title        = {The influence of wall roughness on detonation limits in hydrogen–oxygen mixture},
+  doi          = {10.1016/j.combustflame.2016.05.003},
+  issn         = {0010-2180},
+  pages        = {333--339},
+  volume       = {169},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Sullivan1975,
+  author       = {Sullivan, John H. and Feber, Roy C. and Starner, John W.},
+  date         = {1975-03},
+  journaltitle = {The Journal of Chemical Physics},
+  title        = {Mechanism and types of explosive behavior in hydrogen–fluorine systems},
+  doi          = {10.1063/1.430697},
+  issn         = {1089-7690},
+  number       = {5},
+  pages        = {1714--1725},
+  volume       = {62},
+  groups       = {h_safety},
+  publisher    = {AIP Publishing},
+}
+
+@Article{Gustin2005,
+  author       = {Gustin, Jean-Louis},
+  date         = {2005-01},
+  journaltitle = {Chemical Health &amp; Safety},
+  title        = {Safety of chlorine production and chlorination processes},
+  doi          = {10.1016/j.chs.2004.08.002},
+  issn         = {1878-0504},
+  number       = {1},
+  pages        = {5--16},
+  volume       = {12},
+  groups       = {h_safety},
+  publisher    = {American Chemical Society (ACS)},
+}
+
+@Article{Du2021,
+  author       = {Du, Zhemin and Liu, Congmin and Zhai, Junxiang and Guo, Xiuying and Xiong, Yalin and Su, Wei and He, Guangli},
+  date         = {2021-03},
+  journaltitle = {Catalysts},
+  title        = {A Review of Hydrogen Purification Technologies for Fuel Cell Vehicles},
+  doi          = {10.3390/catal11030393},
+  issn         = {2073-4344},
+  number       = {3},
+  pages        = {393},
+  volume       = {11},
+  groups       = {h_safety},
+  publisher    = {MDPI AG},
+}
+
+@Article{Nashchekin2020,
+  author       = {Nashchekin, Maxim D. and Minko, Maria V. and Morgunova, Svetlana B. and Minko, Konstantin B.},
+  date         = {2020-09},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Enhancement of heat- and mass-transfer processes in a metal-hydride flow-through hydrogen-purification reactor},
+  doi          = {10.1016/j.ijhydene.2020.06.233},
+  issn         = {0360-3199},
+  number       = {46},
+  pages        = {25013--25029},
+  volume       = {45},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
