some mods in h2 intro subsection v_1

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -6617,6 +6617,18 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Book{Stephan2013,
+  author       = {Stephan, Peter and Schaber, Karlheinz and Stephan, Karl and Mayinger, Franz},
+  date         = {2013},
+  title        = {Thermodynamik: Grundlagen und technische Anwendungen Band 1: Einstoffsysteme},
+  doi          = {10.1007/978-3-642-30098-1},
+  isbn         = {9783642300981},
+  publisher    = {Springer Berlin Heidelberg},
+  groups       = {hydrogen_section},
+  issn         = {0937-7433},
+  journaltitle = {Springer-Lehrbuch},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
