mod table colors

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -170,7 +170,7 @@
   publisher = {Wiley},
   series    = {Aerospace series},
   subtitle  = {Arguing from the real physics},
-  groups    = {gnereal_aero},
+  groups    = {gnereal_aero, h_safety},
   ppn_gvk   = {1724647245},
 }
 
@@ -6627,6 +6627,16 @@ Part 1: Flow capacities up to and including 120 g/s},
   groups       = {hydrogen_section},
   issn         = {0937-7433},
   journaltitle = {Springer-Lehrbuch},
+}
+
+@Book{Liu2022a,
+  author    = {Liu, Peiqing},
+  date      = {2022},
+  title     = {Aerodynamics},
+  doi       = {10.1007/978-981-19-4586-1},
+  isbn      = {9789811945861},
+  publisher = {Springer Nature Singapore},
+  groups    = {h_safety},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
