--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -181,7 +181,7 @@
   doi          = {10.1007/978-94-017-9747-4},
   isbn         = {9789401797474},
   publisher    = {Springer Netherlands},
-  groups       = {gnereal_aero},
+  groups       = {gnereal_aero, h_safety},
   issn         = {2215-0056},
   journaltitle = {Fluid Mechanics and Its Applications},
 }
@@ -1150,18 +1150,6 @@ Now available to download in full as a PDF.},
   groups    = {hydro_Plane, report_1, pressure_vessel_Section},
 }
 
-@Article{dryer2007spontaneous,
-  author    = {Dryer, Frederick L and Chaos, Marcos and Zhao, Zhenwei and Stein, Jeffrey N and Alpert, Jeffrey Y and Homer, Christopher J},
-  title     = {Spontaneous ignition of pressurized releases of hydrogen and natural gas into air},
-  number    = {4},
-  pages     = {663--694},
-  volume    = {179},
-  groups    = {hydro_Plane, chaos, report_1},
-  journal   = {Combustion science and technology},
-  publisher = {Taylor \& Francis},
-  year      = {2007},
-}
-
 @Article{Thomas1997,
   author       = {Thomas, C E},
   title        = {Direct-hydrogen-fueled proton-exchange-membrane fuel cell system for transportation applications. Hydrogen vehicle safety report},
@@ -1250,7 +1238,7 @@ Now available to download in full as a PDF.},
   number    = {13},
   pages     = {2178--2185},
   volume    = {32},
-  groups    = {hydrogen, report_1},
+  groups    = {hydrogen, report_1, h_safety},
   journal   = {International Journal of Hydrogen Energy},
   publisher = {Elsevier},
   year      = {2007},
@@ -1412,7 +1400,7 @@ Now available to download in full as a PDF.},
   number       = {36},
   pages        = {13705--13730},
   volume       = {48},
-  groups       = {hydro_Harms, report_2},
+  groups       = {hydro_Harms, report_2, h_safety},
   publisher    = {Elsevier BV},
 }
 
@@ -6637,6 +6625,194 @@ Part 1: Flow capacities up to and including 120 g/s},
   isbn      = {9789811945861},
   publisher = {Springer Nature Singapore},
   groups    = {h_safety},
+}
+
+@Article{Frost2021,
+  author       = {Frost, David L. and Clemenson, John‐Mark and Goroshin, Samuel and Zhang, Fan and Soo, Michael},
+  date         = {2021-03},
+  journaltitle = {Propellants, Explosives, Pyrotechnics},
+  title        = {Thermocouple Temperature Measurements in Metalized Explosive Fireballs},
+  doi          = {10.1002/prep.202000328},
+  issn         = {1521-4087},
+  number       = {6},
+  pages        = {899--911},
+  volume       = {46},
+  groups       = {h_safety},
+  publisher    = {Wiley},
+}
+
+@Article{Lebel2013,
+  author       = {Lebel, Luke S. and Brousseau, Patrick and Erhardt, Lorne and Andrews, William S.},
+  date         = {2013-04},
+  journaltitle = {Journal of Applied Mechanics},
+  title        = {Measurements of the Temperature Inside an Explosive Fireball},
+  doi          = {10.1115/1.4023561},
+  issn         = {1528-9036},
+  number       = {3},
+  volume       = {80},
+  groups       = {h_safety},
+  publisher    = {ASME International},
+}
+
+@Article{Cashdollar2007,
+  author       = {Cashdollar, Kenneth L. and Zlochower, Isaac A.},
+  date         = {2007-07},
+  journaltitle = {Journal of Loss Prevention in the Process Industries},
+  title        = {Explosion temperatures and pressures of metals and other elemental dust clouds},
+  doi          = {10.1016/j.jlp.2007.04.018},
+  issn         = {0950-4230},
+  number       = {4–6},
+  pages        = {337--348},
+  volume       = {20},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Goroshin2006,
+  author       = {Goroshin, Samuel and Frost, David L. and Levine, Jeffrey and Yoshinaka, Akio and Zhang, Fan},
+  date         = {2006-06},
+  journaltitle = {Propellants, Explosives, Pyrotechnics},
+  title        = {Optical Pyrometry of Fireballs of Metalized Explosives},
+  doi          = {10.1002/prep.200600024},
+  issn         = {1521-4087},
+  number       = {3},
+  pages        = {169--181},
+  volume       = {31},
+  groups       = {h_safety},
+  publisher    = {Wiley},
+}
+
+@Book{Sasoh2020,
+  author    = {Sasoh, Akihiro},
+  date      = {2020},
+  title     = {Compressible Fluid Dynamics and Shock Waves},
+  doi       = {10.1007/978-981-15-0504-1},
+  isbn      = {9789811505041},
+  publisher = {Springer Singapore},
+  groups    = {h_safety},
+}
+
+@InBook{Stauffer2008,
+  author    = {Stauffer, Eric and Dolan, Julia A. and Newman, Reta},
+  booktitle = {Fire Debris Analysis},
+  date      = {2008},
+  title     = {Chemistry and Physics of Fire and Liquid Fuels},
+  doi       = {10.1016/b978-012663971-1.50008-7},
+  isbn      = {9780126639711},
+  pages     = {85--129},
+  publisher = {Elsevier},
+  groups    = {h_safety},
+}
+
+@Article{Zhou2022,
+  author       = {Zhou, Shangyong and Luo, Zhenmin and Wang, Tao and He, Minyao and Li, Ruikang and Su, Bin},
+  date         = {2022-02},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Research progress on the self-ignition of high-pressure hydrogen discharge: A review},
+  doi          = {10.1016/j.ijhydene.2022.01.033},
+  issn         = {0360-3199},
+  number       = {15},
+  pages        = {9460--9476},
+  volume       = {47},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Qiu2024,
+  author       = {Qiu, Haowei and Zhou, Rui and Li, Xing and Xie, Yunsheng and Fan, Min and Li, Jun and Huang, Hongyu},
+  date         = {2024-10},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {A review on spontaneous ignition mechanism of pressurized hydrogen released through tubes},
+  doi          = {10.1016/j.ijhydene.2024.08.442},
+  issn         = {0360-3199},
+  pages        = {613--637},
+  volume       = {86},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{dryer2007spontaneous,
+  author       = {DRYER, FREDERICK L. and CHAOS, MARCOS and ZHAO, ZHENWEI and STEIN, JEFFREY N. and ALPERT, JEFFREY Y. and HOMER, CHRISTOPHER J.},
+  date         = {2007-03},
+  journaltitle = {Combustion Science and Technology},
+  title        = {SPONTANEOUS IGNITION OF PRESSURIZED RELEASES OF HYDROGEN AND NATURAL GAS INTO AIR},
+  doi          = {10.1080/00102200600713583},
+  issn         = {1563-521X},
+  number       = {4},
+  pages        = {663--694},
+  volume       = {179},
+  groups       = {h_safety},
+  publisher    = {Informa UK Limited},
+}
+
+@Article{Mogi2008,
+  author       = {Mogi, Toshio and Kim, Dongjoon and Shiina, Hiroumi and Horiguchi, Sadashige},
+  date         = {2008-03},
+  journaltitle = {Journal of Loss Prevention in the Process Industries},
+  title        = {Self-ignition and explosion during discharge of high-pressure hydrogen},
+  doi          = {10.1016/j.jlp.2007.06.008},
+  issn         = {0950-4230},
+  number       = {2},
+  pages        = {199--204},
+  volume       = {21},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Golub2008,
+  author       = {Golub, V.V. and Baklanov, D.I. and Golovastov, S.V. and Ivanov, M.F. and Laskin, I.N. and Saveliev, A.S. and Semin, N.V. and Volodin, V.V.},
+  date         = {2008-03},
+  journaltitle = {Journal of Loss Prevention in the Process Industries},
+  title        = {Mechanisms of high-pressure hydrogen gas self-ignition in tubes},
+  doi          = {10.1016/j.jlp.2007.06.012},
+  issn         = {0950-4230},
+  number       = {2},
+  pages        = {185--198},
+  volume       = {21},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Mogi2009,
+  author       = {Mogi, Toshio and Wada, Yuji and Ogata, Yuji and Koichi Hayashi, A.},
+  date         = {2009-07},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Self-ignition and flame propagation of high-pressure hydrogen jet during sudden discharge from a pipe},
+  doi          = {10.1016/j.ijhydene.2009.04.079},
+  issn         = {0360-3199},
+  number       = {14},
+  pages        = {5810--5816},
+  volume       = {34},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Lee2011,
+  author       = {Lee, Hyoung Jin and Kim, Yeong Ryeon and Kim, Sei-Hwan and Jeung, In-Secuk},
+  date         = {2011},
+  journaltitle = {Proceedings of the Combustion Institute},
+  title        = {Experimental investigation on the self-ignition of pressurized hydrogen released by the failure of a rupture disk through tubes},
+  doi          = {10.1016/j.proci.2010.06.040},
+  issn         = {1540-7489},
+  number       = {2},
+  pages        = {2351--2358},
+  volume       = {33},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Jiang2019,
+  author       = {Jiang, Yiming and Pan, Xuhai and Yan, Weiyang and Wang, Zhilei and Wang, Qingyuan and Hua, Min and Jiang, J.},
+  date         = {2019-08},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Pressure dynamics, self-ignition, and flame propagation of hydrogen jet discharged under high pressure},
+  doi          = {10.1016/j.ijhydene.2019.03.268},
+  issn         = {0360-3199},
+  number       = {40},
+  pages        = {22661--22670},
+  volume       = {44},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
